RESOLVED FIXED95484
JSC: Fix broken classic interpreter build
https://bugs.webkit.org/show_bug.cgi?id=95484
Summary JSC: Fix broken classic interpreter build
Mark Lam
Reported 2012-08-30 11:45:21 PDT
Fix up a few compiler errors due to recent changes in how JS scopes work. The JSWithScope patch is courtesy of Geoff Garen.
Attachments
Fix. (2.29 KB, patch)
2012-08-30 11:51 PDT, Mark Lam
no flags
Mark Lam
Comment 1 2012-08-30 11:51:42 PDT
WebKit Review Bot
Comment 2 2012-08-30 13:17:27 PDT
Comment on attachment 161526 [details] Fix. Clearing flags on attachment: 161526 Committed r127179: <http://trac.webkit.org/changeset/127179>
WebKit Review Bot
Comment 3 2012-08-30 13:17:30 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.