Fix broken classic intrpreter build. https://bugs.webkit.org/show_bug.cgi?id=95484.

Patch by Mark Lam <mark.lam@apple.com> on 2012-08-30
Reviewed by Filip Pizlo.

* interpreter/Interpreter.cpp:
(JSC::Interpreter::privateExecute):

Canonical link: https://commits.webkit.org/113350@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127179 268f45cc-cd09-0410-ab3c-d52691b4dbfc